# my-dictionary-in-rust

./: Cargo.toml  hello.html
src/: main.rs  router.rs  state.rs
src/app/: app_context.rs
src/dictionary/: dictionary.rs  errors.rs  mod.rs
src/flows/: errors.rs  key_values.rs  mod.rs
src/http/: controllers_builder.rs  errors.rs  mod.rs
src/http/controllers/: dictionary_controller.rs  mod.rs
src/services/: dictionary.rs
