[package]
name = "my-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-extensions = {branch= "main", git= "https://github.com/MyJetTools/rust-extensions.git"}
my-http-server = {branch = "0.1.0", git = "https://github.com/MyJetTools/my-http-server.git"}
tokio = { version = "1", features = ["full"] }
tokio-util = "*"
async-trait = "*"